MTS/src/objects/position__c.object
<CustomObject>
    <description>position object for the new postion in ey</description>
    <fields>
        <fullName>Max_Pay__c</fullName>
        <label>Max Pay</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Min_Pay__c</fullName>
        <label>Min Pay</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Position_Grade__c</fullName>
        <description>postion Grade</description>
        <label>Position Grade</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Position_Name__c</fullName>
        <description>field for new postion name</description>
        <label>Position Name</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Position_test__c</fullName>
        <description>postion test</description>
        <label>Position test</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>positionfield__c</fullName>
        <label>positionfield</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>position</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>position Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Positions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Min_Pay_Rule</fullName>
        <active>true</active>
        <description>Min pay should not exceed Max pay</description>
        <errorConditionFormula>Min_Pay__c  &gt;  Max_Pay__c</errorConditionFormula>
        <errorDisplayField>Min_Pay__c</errorDisplayField>
        <errorMessage>Min Pay Should not exceed Max Pay</errorMessage>
    </validationRules>
</CustomObject>